--- a/package.json
+++ b/package.json
@@ -4,30 +4,39 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/presentation/index.ts",
-    "compile": "tsc -w",
-    "update": "prisma db push",
-    "generate": "prisma generate"
+    "start": "node dist/presentation/index.js",
+    "build": "tsc -w",
+    "dev": "nodemon src/presentation/index.ts",
+    "migrate": "prisma db push",
+    "generate": "prisma generate",
+    "studio": "prisma studio"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.3.0",
+    "@prisma/client": "^5.5.2",
+    "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
     "inversify": "^6.0.1",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "reflect-metadata": "^0.1.13"
+    "nodemailer": "^6.9.7",
+    "reflect-metadata": "^0.1.13",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.1",
     "@types/compression": "^1.7.3",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/morgan": "^1.9.5",
+    "@types/nodemailer": "^6.4.13",
     "nodemon": "^3.0.1",
     "prisma": "^5.3.0",
     "ts-node": "^10.9.1",
