--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,26 @@
-NODE_ENV = "Development"
-baseURL = "http://localhost"
-PORT = 8080
-apiVersion = "/v1"
+NODE_ENV =  # Production or Development
+PORT = 
+API_Version = "/v1"
 
-# App Name
-APP_Name = "Tabeeb"
+#App Name
+APP_Name = 
 
 #DatabaseURL
 DATABASE_URL =
 
-# Super Admin Information
-firstName = 
-lastName = 
-email = 
-password =  #Password must be 8 characters at least
+#Super Admin Information
+Super_Admin_FirstName = 
+Super_Admin_LastName = 
+Super_Admin_Email = 
+Super_Admin_Password =  #Password must be 8 characters at least
 
 #JWT Settings
 JWT_Access_Token_Secret_Key =
 JWT_Refresh_Token_Secret_Key =
+JWT_Email_Verification_Token_Secret_Key = 
+
 
 #Send Email Settings
-host = 
-auth_user = 
-auth_pass = 
+Email_Host = 
+Email_Auth_User = 
+Email_Auth_Pass =
